--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 sudo: false
+cache:
+  directories:
+  - $HOME/.cache/pip
+  - $HOME/.cache/pre-commit
 
 addons:
+  postgresql: "9.6"
   apt:
     packages:
       - expect-dev  # provides unbuffer utility
@@ -12,7 +17,7 @@ stages:
   - test
 
 python:
-  - "2.7"
+  - "3.6"
 
 jobs:
   include:
@@ -23,7 +28,7 @@ jobs:
       script: pre-commit run --all
 env:
   global:
-  - VERSION="10.0" TESTS="1" LINT_CHECK="0"
+  - VERSION="12.0" TESTS="1" LINT_CHECK="0" ERRORS_IGNORE="Wrong HTTP_API_KEY;RESTFULL call to url" MQT_DEP="PIP"
 
   matrix:
   - TESTS="0" LINT_CHECK="1"
@@ -31,18 +36,13 @@ env:
   - UNIT_TEST="1" ODOO_REPO="OCA/OCB"
 
 install:
-  - git clone -b configure_line_with_error https://github.com/akretion/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
+  - git clone --depth=1 https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
-  - pip install pylint==1.8.4
   - printf '[options]\n\nrunning_env = dev\nkeychain_key_dev = HRdthrkXp28SCHX0kmwOgIob-82N-w8zWoE_UsctE7E=' > ${HOME}/.openerp_serverrc
-  - git clone https://github.com/akretion/akretion-quality-tools ${HOME}/akretion-quality-tools
-  - export PATH=${HOME}/akretion-quality-tools/travis:${PATH}
   - export PATH=.travis:${PATH}
-  - travis_configure
 
 script:
-  - mv .isort.cfg .isoft.cfg.disabled # to avoid trouble with pylint
   - travis_run_tests
 
 after_success:
